--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "body-parser": "1.18.3",
     "cors": "*2.8.4",
+    "ejs": "^2.6.1",
     "express": "4.16.4",
     "lodash": "4.17.11",
     "mongodb": "3.1.8",
