--- a/app/package.json
+++ b/app/package.json
@@ -1,30 +1,59 @@
 {
-  "name": "pomodoroapp",
-  "version": "1.0.0",
-  "description": "Pomodoro",
+  "name": "webpack-starter-config",
+  "version": "4.17.2",
+  "description": "Simple webpack config",
   "main": "index.js",
   "scripts": {
-    "webpack": "webpack -w",
-    "start": "webpack-dev-server",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prebuild": "rimraf public && npm install",
+    "build": "webpack --mode production --colors --progress",
+    "prestart": "rimraf public && npm install",
+    "start": "webpack-dev-server --mode development --hot --colors --progress"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/revivalme/Pomodoro.git"
+    "url": "git+https://github.com/LeeSwagger/webpack-starter.git"
   },
-  "author": "",
-  "license": "ISC",
+  "keywords": [
+    "webpack",
+    "es6",
+    "es7",
+    "babel",
+    "sass"
+  ],
+  "author": "LeeSwagger",
+  "license": "MIT",
   "bugs": {
-    "url": "https://github.com/revivalme/Pomodoro/issues"
+    "url": "https://github.com/LeeSwagger/webpack-starter/issues"
   },
-  "homepage": "https://github.com/revivalme/Pomodoro#readme",
+  "homepage": "https://github.com/LeeSwagger/webpack-starter#readme",
   "devDependencies": {
-    "@babel/core": "^7.1.2",
-    "@babel/preset-env": "^7.1.0",
-    "babel-loader": "^8.0.4",
-    "html-webpack-plugin": "^3.2.0",
-    "webpack": "^4.22.0",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.10"
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.0.0",
+    "@babel/plugin-proposal-optional-chaining": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "autoprefixer": "^9.1.5",
+    "babel-loader": "^8.0.2",
+    "css-loader": "^1.0.0",
+    "cssnano": "^4.1.0",
+    "file-loader": "^2.0.0",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.0.6",
+    "image-webpack-loader": "^4.3.1",
+    "mini-css-extract-plugin": "^0.4.2",
+    "node-sass": "^4.9.3",
+    "postcss-loader": "^3.0.0",
+    "rimraf": "^2.6.2",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.0",
+    "uglifyjs-webpack-plugin": "^1.3.0",
+    "webpack": "^4.17.2",
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.8",
+    "yargs": "^12.0.2"
+  },
+  "dependencies": {
+    "babel-polyfill": "^6.26.0",
+    "lodash": "^4.17.10"
   }
 }
