--- a/app/package.json
+++ b/app/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.4.2",
-    "bootstrap": "^4.1.3"
+    "bootstrap": "^4.1.3",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.4"
   },
   "devDependencies": {
     "@babel/core": "^7.1.2",
